# ark-api

./: .dockerignore  .gitignore  LICENSE  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-docker.yml  ci.yml  dependabot-automerge.yml  dependabot-uv.yml
.keys/: private.pem  public.pem
alembic/: env.py
alembic/versions/: 57431b195857_split_user_name_to_first_last.py  58397fa5202c_add_messaging.py  6a6908e87629_add_webhook_client.py  6e93991c2bf7_update_auth_and_rbac.py  85b6af6bd4e2_init_users_and_auth.py  bb9d845746f2_add_device_tokens.py  e06de5852c48_add_performance_indexes.py  ecdb11b297f0_add_message_media_and_receipts.py
apps/mobile/: app.json  package.json
apps/mobile/app/: _layout.tsx  users.tsx
apps/mobile/constants/: Config.ts
apps/mobile/services/: api.ts
apps/mobile/stores/: useAuthStore.ts
apps/web/: middleware.ts  next.config.ts  package.json
apps/web/hooks/: useAuth.ts  (+1 more)
backend/: .env.example  main.py  package.json  pyproject.toml
backend/alembic/: env.py
backend/core/: config.py  database.py  models.py  redis.py  security.py  worker.py
backend/tests/: conftest.py  test_auth.py  test_release_script.py
core/: config.py  database.py  exceptions.py  lifespan.py  middleware.py  models.py  pagination.py  redis.py  security.py  websocket.py  worker.py
info/: macket_v2.html
infra/: api.Dockerfile  docker-compose.prod.yml  docker-compose.yml
infra/docker/: api.Dockerfile  postgres.Dockerfile  web.Dockerfile
modules/auth/: models.py  router.py  schemas.py  service.py
modules/messaging/: exceptions.py  models.py  router.py  schemas.py  service.py  ws_router.py
modules/notifications/: models.py  schemas.py  service.py
modules/users/: dependencies.py  exceptions.py  init_db.py  models.py  repository.py  roles_router.py  router.py  schemas.py  service.py  services_router.py
scripts/: add_user.py  create_release.py  db_status.py  dedup_chats.py  generate_assets.py  seed_starwars.py  seed_users.py  send_test_push.py
tests/: conftest.py  test_auth.py  test_docs.py  test_notifications.py  test_release_script.py
(+33 files in other folders)
