[project]
name = "ark-api"
version = "2026.5.23"
description = "Backend for Ark Messenger"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi[standard]>=0.111.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.7.1",
    "python-ulid>=3.1.0",
    "redis>=5.0.4",
    "arq>=0.25.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.30",
    "alembic>=1.13.1",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.8.0",
    "resend>=2.30.1",
]

[tool.uv]
managed = true
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "DTZ", "PT"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "testcontainers[postgres]>=4.14.2",
]
