[project]
name = "ark-api"
version = "2026.5.23"
description = "Backend for Ark Messenger"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31.0",
    "pydantic[email]>=2.13.4",
    "python-ulid>=3.1.0",
    "redis>=5.0.4",
    "arq>=0.28.0",
    "structlog>=26.1.0",
    "python-multipart>=0.0.32",
    "alembic>=1.18.4",
    "pydantic-settings>=2.14.2",
    "pyjwt[crypto]>=2.13.0",
    "resend>=2.32.2",
]

[tool.uv]
managed = true
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "DTZ", "PT"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Security",
    "modules.users.dependencies.require_role",
    "modules.users.dependencies.require_approved_user",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.19",
    "testcontainers[postgres]>=4.14.2",
]
